[package]
name = "ferrox"
version = "0.1.0"
authors = ["NWPlayer123 <nikki@aetheria.dev>"]
edition = "2021"
description = "Decompilation-Oriented Disassembler."
readme = "README.md"
repository = "https://github.com/NWPlayer123/Ferrox"
license = "MPL-2.0"
#im-a-teapot = false - needs nightly, TODO?
# TODO: keywords

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
eframe = "0.29"
egui = { version = "0.29", features = ["callstack"] }
egui_extras = "0.29"
rfd = "0.15"
bitflags = "2.6"
zerocopy = "0.8"
orthrus-core = "0.3"
snafu = { version = "0.8", features = ["rust_1_81"] }
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "sync"] }
egui_dock = "0.14.0"
